--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -28,4 +28,11 @@ jobs:
       run: |
        chmod +x ./backend/run.sh
        cd backend/ && ./run.sh
+    - name: Upload api test results
+      uses: actions/upload-artifact@v3.1.0
+      if: awalys()
+      with:
+        name: api-reports
+        path: backend/logs
+   
       
