--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -34,5 +34,11 @@ jobs:
       with:
         name: api-reports
         path: backend/logs
+    - name: Test Reporter
+      uses: dorny/test-reporter@v1.5.0   
+      with: 
+        name: API Test Result
+        path: backend/log/xunit.xml
+        reporter: java-junit
    
       
