corrigindo o nome da past logs

--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -38,7 +38,7 @@ jobs:
       uses: dorny/test-reporter@v1.5.0   
       with: 
         name: API Test Result
-        path: backend/log/xunit.xml
+        path: backend/logs/xunit.xml
         reporter: java-junit
    
       
